--- a/conFusion/app/views/aboutus.html
+++ b/conFusion/app/views/aboutus.html
@@ -1,4 +1,5 @@
-<div class="container" ng-controller="AboutController">
+
+    <div class="container" ng-controller="AboutController">
         <div class="row">
             <div class="col-xs-12">
                <ul class="breadcrumb">
@@ -49,30 +50,31 @@
             </div>
         </div>
 
+
         <div class="row row-content">
-            <h2>Corporate Leadership</h2>
-            <ul class="media-list" ng-repeat="leader in leaders">
-                <div class="col-xs-12 col-sm-9">
-                    <div class="media">
-                        <div class="media-left media-middle">
-                            <a href="#">
-                                <img class="media-object img-thumbnail" 
-                                     ng-src={{leader.image}} alt={{leader.name}}>
-                            </a>
-                        </div>
-                        <div class="media-body">
-                            <h3 class="media-heading">{{leader.name}}
-                            <small>{{leader.designation}}</small></h3>
-                            <p>{{leader.description}}</p>
-                        </div>
+            <div class="col-xs-12 col-sm-9">
+                <h2>Corporate Leadership</h2>
+               <ul class="media-list">
+				    
+                   <ul class="media" ng-repeat="leader in leaderList">
+                    <div class="media-left media-middle">
+                        <a ui-sref="#">
+                        <img class="media-object img-thumbnail"
+                        ng-src={{leader.image}} alt="LeadershipImage">
+                        </a>
                     </div>
-                </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{leader.name}} 
+                            <small>{{leader.designation}}</small></h2>
+                         <p>{{leader.description}}</p>
+                    </div>
+                </ul>
             </ul>
-            <div class="col-xs-12 col-sm-3">
+            </div>
+             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
             </div>
-        </div>
-        
+       </div>
         <div class="row row-content">
             <div class="col-xs-12 col-sm-9">
                 <h2>Facts &amp; Figures</h2>
