--- a/conFusion/app/views/dishdetail.html
+++ b/conFusion/app/views/dishdetail.html
@@ -1,11 +1,44 @@
-<div class="container" ng-controller="DishDetailController">
+<!DOCTYPE html>
+<html lang="en" ng-app="confusionApp">
+
+<head>
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head
+         content must come *after* these tags -->
+    <title>Ristorante Con Fusion: Menu</title>
+        <!-- Bootstrap -->
+<!-- build:css styles/main.css -->
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="styles/bootstrap-social.css" rel="stylesheet">
+    <link href="styles/mystyles.css" rel="stylesheet">
+<!-- endbuild -->
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+
+    <div class="container" ng-controller="DishDetailController">
         <div class="row row-content">
-            <div class="col-xs-12">
-            <button class="btn btn-xs btn-primary pull-right"
+            <div class="col-xs-12" ng-if="!showDish">
+                <h3>{{message}}</h3>
+            </div>
+            
+            <div class="col-xs-12" ng-if="showDish">
+                <button class="btn btn-xs btn-primary pull-right"
                     type="button" ui-sref="app.menu">
                     Back to Menu
-            </button>
-            <div class="media" ng-init="dish">
+                </button>
+              <div class="media" ng-init="dish">
                     <div class="media-left media-middle">
                         <a href="#">
                         <img class="media-object img-thumbnail"
@@ -28,22 +61,22 @@
                 <br>
                 <div ng-repeat = "com in dish.comments | orderBy : sortType ">
                 <blockquote>
-                    <p> <h3> {{com.rating}} Stars </h3></p>
-                    <p><h3>  {{com.comment}}</h3></p>
+                    <h3> <p>  {{com.rating}} Stars </p></h3>
+                    <h3> <p>  {{com.comment}}</p></h3>
                     <footer>{{com.author}}, {{com.date | date}}</footer>
-                    
                 </blockquote>
             </div>
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-                    <ul class="list-unstyled">
+                    
+                <ul class="list-unstyled">
 				
                 <blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
-                    <p> <h3> {{Childcomments.rating}} Stars </h3></p>
-                    <p><h3>  {{Childcomments.comment}}</h3></p>
+                    <h3> <p> {{Childcomments.rating}} Stars </p></h3>
+                    <h3> <p>  {{Childcomments.comment}}</p></h3>
                     <footer>{{Childcomments.author}}, {{Childcomments.date | date}}</footer>
-                 </blockquote>
-                    </ul>
+                </blockquote>
+                 </ul>
                 <form class="form-horizontal" name="commentForm"
                 		ng-submit="submitComment()" novalidate>
 					
@@ -92,4 +125,14 @@
                 </form>
             </div>
         </div>
-</div>
+    </div>
+
+<!-- build:js scripts/main.js -->
+    <script src="../bower_components/angular/angular.min.js"></script>
+    <script src="scripts/controllers.js"></script>
+    <script src="scripts/services.js"></script>
+<!-- endbuild -->
+
+</body>
+
+</html>
