--- a/conFusion/app/views/menu.html
+++ b/conFusion/app/views/menu.html
@@ -1,14 +1,44 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en" ng-app="confusionApp">
+
+<head>
+     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head
+         content must come *after* these tags -->
+    <title>Ristorante Con Fusion: Menu</title>
+        
+
+            <!-- Bootstrap -->
+<!-- build:css styles/main.css -->
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="styles/bootstrap-social.css" rel="stylesheet">
+    <link href="styles/mystyles.css" rel="stylesheet">
+<!-- endbuild -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+
+    <div class="container">
         <div class="row row-content" ng-controller="MenuController">
             <div class="col-xs-12" ng-if="!showMenu">
                 <h3>{{message}}</h3>
-            </div>
-             <div class="col-xs-12" ng-if="showMenu">   
+            </div>    
+            <div class="col-xs-12" ng-if="showMenu">    
                 <button ng-click="toggleDetails()" class="btn btn-xs btn-primary pull-right" type="button">
                     {{showDetails ? 'Hide Details':'Show Details'}}
                 </button>
                 
-                 <ul class="nav nav-tabs" role="tablist">
+                <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" ng-class="{active:isSelected(1)}">
                     <a ng-click="select(1)"
                      aria-controls="all menu"
@@ -26,11 +56,10 @@
                      aria-controls="desserts"
                      role="tab">Desserts</a></li>
                 </ul>
-                
             <div class="tab-content">
                 <ul class="media-list tab-pane fade in active">
                 <ul class="media" ng-repeat="dish in dishes | filter:filtText">
-                     <div class="media-left media-middle">
+                    <div class="media-left media-middle">
                         <a ui-sref="app.dishdetails({id: dish.id})">
                         <img class="media-object img-thumbnail"
                         ng-src={{dish.image}} alt="Uthappizza">
@@ -40,7 +69,7 @@
                         <h2 class="media-heading">{{dish.name | lowercase}}
                          <span class="label label-danger">{{dish.label}}</span>
                          <span class="badge">{{dish.price | currency }}</span></h2>
-                       <p ng-show="showDetails">{{dish.description}}</p>
+                        <p ng-show="showDetails">{{dish.description}}</p>
                         <!--<p>Comment: {{dish.comment}}</p>
                         <p>Type your comment:
                          <input type="text" ng-model="dish.comment"></p>-->
@@ -50,4 +79,13 @@
             </div>
             </div>
         </div>
-</div>
+    </div>
+
+</body>
+<!-- build:js scripts/main.js -->
+    <script src="../bower_components/angular/angular.min.js"></script>
+    <!--<script src="scripts/app.js"></script> -->
+    <script src="scripts/controllers.js"></script>
+    <script src="scripts/services.js"></script>
+    <!-- endbuild -->
+</html>
